Add sprint-by-status and auth-aware projects
Use authenticated user for project creation and selector, add sprint tasks-by-status endpoint and DTO, and convert stream .toList() to Collectors.toList() where needed.

- ProjectController: retrieve current Users from SecurityContextHolder for createProject and replaced /user/{userId}/selector with /my/selector.
- ProjectService: accept creatorId for createProject, persist creator as ProjectMembers with current timestamp, and adapt stream collection.
- TasksController: replace status endpoint with /sprint/{sprintId}/by-status delegating to TasksService.
- TasksService: implement getSprintTasksByStatus that validates sprint, builds SprintTasksByStatusResponse by filtering task summaries by status, and adjust stream collectors.
- Added DTO SprintTasksByStatusResponse representing lists for todo, inProgress, review, blocked, and done.
- ProjectMemberService: fixed stream terminal operations to use Collectors.toList().

These changes wire authentication into project workflows, provide a grouped view of sprint tasks by status for the frontend, and fix stream collection compatibility.